@@ -1,3 +1,10 @@
+Tue Oct 23 11:33:56 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* lib/functions/numerical.gel: remove IsGaussianInteger, we already
+	  have IsGaussInteger alias IsComplexInteger
+
+	* help/C/gel-function-list.xml: updates and fixes
+
 Tue Oct 23 10:51:24 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: better logic for figuring out something is a
